--- a/example-widget/studio.html
+++ b/example-widget/studio.html
@@ -3,12 +3,12 @@
 <head>
 
   <!-- BoxItNow CSS -->
-   <link rel="stylesheet" type="text/css" href="https://[API ENDPOINT]/css/bin.cache.min.css" />
+   <link rel="stylesheet" type="text/css" href="https://[API URL]/css/bin.cache.min.css" />
 
 
    <!-- (Required) -->
   <!-- BoxItNow JS -->
-   <script type="text/javascript" src="https://[API ENDPOINT]/js/bin.bootstrap.js"></script>
+   <script type="text/javascript" src="https://[API URL]/js/bin.bootstrap.js"></script>
 
 
   <!-- CLIENT CSS -->
@@ -102,8 +102,8 @@
     //LOAD bin libraries
     BIN.Bootstrap.load({
       //the root of the BIN HOST site
-      apiUrl: "https://[API ENDPOINT]/",
-      apiKey: "VGL6TmfXuFMprVPy"
+      apiUrl: "https://[API URL]/",
+      apiKey: "[API KEY]"
 
     }, function() {
 
@@ -140,10 +140,7 @@
           //** parameters{...} = [(String x : int a,)*]
 
           parameters: {
-            Length: "15.1",
-
-            //** Deprecated **//
-            //Finish : "White/White",
+            Length: "15.1"
           }
 
 
@@ -213,13 +210,13 @@
           //**
           //** Formally defined by
           //** resizer{...} = [
-          //**                  (enable : (true | false),)?
+          //**                  (enabled : (true | false),)?
           //**                  (readonly : (true | false),)?
           //**                  (modules : [(('mod_advanced' | (''+.*)) ,)?]?
           //**                  (trimParams : (true | false),)?
           //**                ]
               resizer: {
-                enabled: false,
+                enabled: true,
                 readonly: false,
                 modules: [],
                 trimParams: true
@@ -405,7 +402,7 @@
 
           //**(Required)
           //**Fires after action sent
-        		onSave : function() {
+        		onSave : function(userSessionHandle, parameters) {
         		},
 
       		//**(optional)
