--- a/api-doc.html
+++ b/api-doc.html
@@ -811,6 +811,10 @@ margin-bottom: 20px;
     "hpgl" : {
       "type" : "string",
       "description" : "HPGL cutting file"
+    },
+    "parameters" : {
+      "type" : "Object",
+      "description" : "Layout Parameters of Design"
     }
   }
 };
@@ -984,7 +988,8 @@ defs.inline_response_token = {
         <div id="header">
           <div id="api-_">
             <h2 id="welcome-to-apidoc">API and SDK Documentation</h2>
-              <div class="app-desc">Version: 1.5.3</div>
+              <div class="app-desc">Document Version: v1.6</div>
+              <div class="app-desc">Target API: v3.11</div>
             <hr>
             <p class="marked">Access BIN functionality remotely</p>
           </div>
