Example Updates/Fixes

--- a/example-widget/media.html
+++ b/example-widget/media.html
@@ -2,13 +2,13 @@
 
 <head>
   <!-- BoxItNow CSS -->
-  <link rel="stylesheet" type="text/css" href="http://[API ENDPOINT]/css/bin.cache.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://[API ENDPOINT]/css/bin.cache.min.css" />
 
 
 
   <!-- (Required) -->
   <!-- BoxItNow JS -->
-  <script type="text/javascript" src="http://[API ENDPOINT]/js/bin.bootstrap.js"></script>
+  <script type="text/javascript" src="https://[API ENDPOINT]/js/bin.bootstrap.js"></script>
 
   <!-- CLIENT CSS -->
   <!--<link rel="stylesheet" type="text/css" href="spectrum.css" />-->
@@ -90,7 +90,7 @@
     //LOAD bin libraries
     BIN.Bootstrap.load({
       //the root of the BIN HOST site
-      apiUrl: 'http://[API ENDPOINT]/',
+      apiUrl: 'https://[API ENDPOINT]/',
       apiKey: '[API KEY]'
 
     }, function() {
