--- a/example-widget/studio.html
+++ b/example-widget/studio.html
@@ -3,22 +3,12 @@
 <head>
 
   <!-- BoxItNow CSS -->
-   <!--<link rel="stylesheet" type="text/css" href="https://[API URL]/css/bin.cache.min.css" /> -->
+   <link rel="stylesheet" type="text/css" href="https://[API ENDPOINT]/css/bin.cache.min.css" />
 
 
    <!-- (Required) -->
   <!-- BoxItNow JS -->
-   <!--<script type="text/javascript" src="https://[API URL]/js/bin.bootstrap.js"></script> -->
-
-
-
-   <!-- BoxItNow CSS -->
-  <link rel="stylesheet" type="text/css" href="http://localhost/boxitnow/css/bin.cache.min.css" />
-  <!--<link rel="stylesheet" type="text/css" href="https://staging-fantastapack.boxitnow.com/css/bin.cache.min.css" /> -->
-
-  <!-- BoxItNow JS -->
- <script type="text/javascript" src="http://localhost/boxitnow/js/bin.bootstrap.js"></script>
-<!--  <script type="text/javascript" src="https://staging-fantastapack.boxitnow.com/js/bin.bootstrap.js"></script> -->
+   <script type="text/javascript" src="https://[API ENDPOINT]/js/bin.bootstrap.js"></script>
 
 
 
@@ -114,10 +104,8 @@
     //LOAD bin libraries
     BIN.Bootstrap.load({
       //the root of the BIN HOST site
-      //apiUrl: "https://[API URL]/",
-      //apiKey: "[API KEY]"
-      apiUrl: "http://localhost/boxitnow/",
-      apiKey: "VGL6TmfXuFMprVPy"
+      apiUrl: "https://[API ENDPOINT]/",
+      apiKey: "[API KEY]"
 
     }, function() {
 
